# openenv-smart-grid

./: .gitignore  Dockerfile  README.md  index.html  inference.py  openenv.yaml  prd.md  push_error.txt  pyproject.toml  requirements.txt  uv_error.txt  uv_error_2.txt
app/: __init__.py  env.py  graders.py  main.py  reward.py  tasks.py
app/data/: emails_hard.json
scripts/: validate.sh
server/: __init__.py  app.py  env.py  graders.py  models.py  reward.py
server/data/: emails_easy.json  emails_medium.json
