[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "Real-world corporate email triage RL environment"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Hunny0025" }
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "openai>=1.12.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:app"

[tool.setuptools]
packages = ["server"]
